--- a/Basket-Donation-Payments/Basket-Donation-Payments/Storyboards/Base.lproj/Main.storyboard
+++ b/Basket-Donation-Payments/Basket-Donation-Payments/Storyboards/Base.lproj/Main.storyboard
@@ -607,6 +607,7 @@
                         <outlet property="nonprofitsCollectionView" destination="4ZW-ZC-zye" id="yfJ-GS-Grf"/>
                         <outlet property="totalValueDonatedLabel" destination="YY3-2P-gRr" id="psf-t7-zgZ"/>
                         <segue destination="Kbe-lm-Vc1" kind="show" identifier="showNonprofitDetail" id="1Yw-CJ-da4"/>
+                        <segue destination="yGQ-0Y-8lu" kind="show" identifier="BasketPaymentSegue" id="uUJ-iZ-Fd7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="uQ8-zo-m1B" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -814,6 +815,20 @@
                                     <action selector="payButtonTapped:" destination="7dm-6N-BDR" eventType="touchUpInside" id="m6u-3i-2Fu"/>
                                 </connections>
                             </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" alignment="center" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="jHU-9j-EiE">
+                                <rect key="frame" x="31" y="228" width="193" height="24"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="stripe" translatesAutoresizingMaskIntoConstraints="NO" id="CXM-CB-IjO">
+                                        <rect key="frame" x="0.0" y="0.0" width="24" height="24"/>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Powered by Stripe." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="35S-Gz-bvq">
+                                        <rect key="frame" x="49" y="2" width="144" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="KwB-yO-fCC"/>
@@ -821,11 +836,62 @@
                     <navigationItem key="navigationItem" title="2/2 Billing method" id="Ntm-V2-zQh"/>
                     <connections>
                         <outlet property="payButton" destination="chn-m9-E9p" id="ZsH-Yt-T4c"/>
+                        <outlet property="poweredByStripeStackView" destination="jHU-9j-EiE" id="Q9F-Sb-qK6"/>
+                        <segue destination="pm6-xI-aBG" kind="show" identifier="PaymentConfirmedSegue" id="TpT-8L-F07"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="VDa-64-Qcg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="5636" y="-1471"/>
+        </scene>
+        <!--Payment Confirmation View Controller-->
+        <scene sceneID="JJo-Zc-GRG">
+            <objects>
+                <viewController modalTransitionStyle="flipHorizontal" modalPresentationStyle="fullScreen" hidesBottomBarWhenPushed="YES" id="pm6-xI-aBG" customClass="PaymentConfirmationViewController" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="sc5-Qd-Mh6">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="M3M-Hr-K06">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e0S-ge-zB7">
+                                <rect key="frame" x="164" y="643" width="69" height="45"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                                <state key="normal" title="Finish"/>
+                                <connections>
+                                    <action selector="finishButtonTapped:" destination="pm6-xI-aBG" eventType="touchUpInside" id="tcl-Ag-1Xg"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Thanks for contributing!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o7X-0k-K4c">
+                                <rect key="frame" x="106" y="504" width="184" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="checkmark.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="dVM-k4-mi8">
+                                <rect key="frame" x="120" y="218" width="174" height="168"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="M3M-Hr-K06" firstAttribute="leading" secondItem="boY-57-Vcx" secondAttribute="leading" id="PPN-k4-ATJ"/>
+                            <constraint firstItem="M3M-Hr-K06" firstAttribute="top" secondItem="sc5-Qd-Mh6" secondAttribute="top" id="PrE-Zy-lyM"/>
+                            <constraint firstAttribute="bottom" secondItem="M3M-Hr-K06" secondAttribute="bottom" id="QyF-QH-UDQ"/>
+                            <constraint firstItem="M3M-Hr-K06" firstAttribute="trailing" secondItem="boY-57-Vcx" secondAttribute="trailing" id="S7H-L3-tUs"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="boY-57-Vcx"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="s6n-Gc-REh"/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gfE-Vw-KUg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="6295.652173913044" y="-1471.2053571428571"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="bRG-UW-e4g">
@@ -1370,7 +1436,14 @@
                                 </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="$" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c8I-Eb-R5q">
-                                <rect key="frame" x="140" y="274" width="11" height="21"/>
+                                <rect key="frame" x="134" y="274" width="17" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="to BASKETNAMEHERE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qy9-kW-Frr">
+                                <rect key="frame" x="125" y="322" width="163" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -1385,12 +1458,13 @@
                     <nil key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="priceInputTextField" destination="oCL-4I-pCY" id="Thh-AA-krs"/>
+                        <outlet property="recipientLabel" destination="Qy9-kW-Frr" id="LTR-LX-hW0"/>
                         <segue destination="7dm-6N-BDR" kind="show" identifier="AddBillingMethodSegue" id="uPC-Xm-TSN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Pg-hr-eQK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4851" y="-1471"/>
+            <point key="canvasLocation" x="4850.7246376811599" y="-1471.2053571428571"/>
         </scene>
         <!--Nonprofit Container View Controller-->
         <scene sceneID="RFn-6C-wm5">
@@ -1518,5 +1592,6 @@
         <image name="checkmark.circle.fill" catalog="system" width="128" height="121"/>
         <image name="heart" catalog="system" width="128" height="109"/>
         <image name="pencil.circle.fill" catalog="system" width="128" height="121"/>
+        <image name="stripe" width="24" height="24"/>
     </resources>
 </document>
